重构代码，将model单独出来，以便可以多个项目中使用

--- a/XN.Framewoek.Workflow/XN.Framewoek.Workflow.csproj
+++ b/XN.Framewoek.Workflow/XN.Framewoek.Workflow.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="WorkflowCore" Version="1.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Workflow.Models\Workflow.Models.csproj" />
+  </ItemGroup>
+
 </Project>
